add vote endp
